--- a/alxChat_HQ/templates/room.html
+++ b/alxChat_HQ/templates/room.html
@@ -4,11 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
-<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </head>
 <body>
 
-<h2> {{room}} - DjChat</h2>
+<h3> ⚡ Fast Chat ⚡</h3>
+<h4> ⬇️ Current room ⬇️ </h4> 
+<h2> {{room}} </h2>
 
 <div id="display">
 
@@ -18,8 +20,7 @@
 </div> -->
 
 <div class="container darker">
-  <b>Tom</b><p>Hello Everyone, How Are You Guys Doing?</p>
-  <span class="time-left">20th, April 2021</span>
+  <b>Opening Room...</b>  
 </div>
 
 </div>
@@ -77,7 +78,6 @@ setInterval(function(){
         csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
       },
       success: function(data){
-         alert(data)
       }
     });
     document.getElementById('message').value = ''
