--- a/alxChat_HQ/templates/home.html
+++ b/alxChat_HQ/templates/home.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 </head>
-
 <body>
-
     <div align="center">
         <h3> ⚡ Fast Chat ⚡</h3>
     </div>
-
-
     <div class="container">
-
         <form id="post-form" method="POST" action="checkview">
             {% csrf_token %}
             <label>Room Name</label>
@@ -25,9 +19,5 @@
             <input type="submit" value="Enter Room">
         </form>
     </div>
-
-
 </body>
-
-
 </html>
